--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="max">Max.</string>
     <string name="maxtemp">21</string>
     <string name="unit">°C</string>
+    <string name="city_details">City Weather</string>
 </resources>
